force-app/main/default/objects/Intake_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Intake Submissions</relationshipLabel>
        <relationshipName>IntakeSubmissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_ContentDocumentId__c</fullName>
        <label>Original ContentDocumentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Payload__c</fullName>
        <label>Raw Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Redacted_ContentDocumentId__c</fullName>
        <label>Redacted ContentDocumentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                    <default>true</default>
                    <label>API</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                    <default>true</default>
                    <label>Received</label>
                </value>
                <value>
                    <fullName>Redacting</fullName>
                </value>
                <value>
                    <fullName>Redacted</fullName>
                </value>
                <value>
                    <fullName>CaseCreated</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>311 Intake Submission</label>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Intake Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>311 Intake Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>